--- a/Styles/home.css
+++ b/Styles/home.css
@@ -79,6 +79,23 @@ p {
     margin: 40px;
 }
 
+.scrollplease {
+    display: flex;
+    flex-direction: column;
+    margin-top: 50vh;
+    animation-name: scrollpls;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-out;
+    opacity: 0%;
+
+}
+
+@keyframes scrollpls {
+    from {margin-top:50vh; opacity: 100%;}
+    to {margin-top: 70vh; opacity: 0%;}
+}
+
 .recentphotostext {
     text-align: left;
     margin: 0px 14px;
