--- a/Styles/home.css
+++ b/Styles/home.css
@@ -5,41 +5,11 @@
 
 @media (max-width: 750px) {
     body {
-        background: url(../Imgs/backgroundmobile.jpg);
+        background: url(../Imgs/enzo-b-HLFFEcDGwYs-unsplash.jpg);
         background-size: contain;
         background-position: top;
         background-color: #21204b;
         background-repeat: no-repeat;
-    }
-
-    @keyframes {
-        0% {
-            background: url(../Imgs/backgroundmobile.jpg);
-        }
-
-        10% {
-            background-color: black;
-        }
-
-        20% {
-            background: url(../Imgs/backgroundmobile.jpg);
-        }
-
-        30% {
-            background-color: black;
-        }
-
-        40% {
-            background: url(../Imgs/backgroundmobile.jpg);
-        }
-
-        50% {
-            background-color: black;
-        }
-
-        60% {
-            background: url(../Imgs/backgroundmobile.jpg);
-        }
     }
 
     .welc {
@@ -74,12 +44,42 @@
 
 @media (min-width: 750px) {
     body {
-        background: url(../Imgs/background.jpg);
+        background: url(../Imgs/enzo-b-HLFFEcDGwYs-unsplash.jpg);
         background-size: cover;
         background-position: center;
         background-attachment: fixed;
         background-repeat: no-repeat;
     }
+
+        @keyframes {
+            0% {
+                background: url(../Imgs/);
+            }
+
+            10% {
+                background-color: black;
+            }
+
+            20% {
+                background: url(../Imgs/backgroundmobile.jpg);
+            }
+
+            30% {
+                background-color: black;
+            }
+
+            40% {
+                background: url(../Imgs/backgroundmobile.jpg);
+            }
+
+            50% {
+                background-color: black;
+            }
+
+            60% {
+                background: url(../Imgs/backgroundmobile.jpg);
+            }
+        }
 }
 
 body {
