--- a/Styles/home.css
+++ b/Styles/home.css
@@ -44,7 +44,7 @@
 
 @media (min-width: 750px) {
     body {
-        background: url(../Imgs/enzo-b-HLFFEcDGwYs-unsplash.jpg);
+        background: url(../Imgs/landscape.jpg);
         background-size: cover;
         background-position: center;
         background-attachment: fixed;
@@ -53,7 +53,7 @@
 
         @keyframes {
             0% {
-                background: url(../Imgs/);
+                background: url(../Imgs/landscape.jpg);
             }
 
             10% {
@@ -61,7 +61,7 @@
             }
 
             20% {
-                background: url(../Imgs/backgroundmobile.jpg);
+                background: url(../Imgs/landscape2.jpg);
             }
 
             30% {
