--- a/Styles/posts.css
+++ b/Styles/posts.css
@@ -57,7 +57,7 @@
 }
 
 .bg {
-    background-image: url(../Imgs/background.jpg);
+    background-image: url(../Imgs/landscape1.jpg);
     position: absolute;
     top: 0;
     bottom: 0;
