--- a/Styles/home.css
+++ b/Styles/home.css
@@ -5,7 +5,7 @@
 
 @media (max-width: 750px) {
     body {
-        background-color: black !important;
+        background-color: url(../Imgs/portrait1.jpg) !important;
         background-size: contain !important;
         background-position: top;
         background-color: #21204b;
@@ -53,7 +53,7 @@
 
 @media (min-width: 750px) {
     body {
-        background: black;
+        background: url(../Imgs/landscape1.jpg);
         background-size: cover !important;
         background-position: center !important;
         background-attachment: fixed !important;
